# helptulsa

./: .env.example  .gitignore  README.md  docker-compose.yml
data/: resources.jsonl
data/qdrant/: raft_state.json
data/qdrant/collections/help_resources/0/: newest_clocks.json  replica_state.json
data/qdrant/collections/help_resources/0/segments/1eb59191-d7dc-4a59-92e7-24684903cb35/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/44672923-8883-4738-8e1a-7ac29d4781ab/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/60db9da9-1ffa-4527-9bf9-3a185fbed1d1/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/60eeadff-b58c-43d1-be5b-cc4b543dc6a0/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/737f633d-4a1c-4927-bc93-2d5520e33988/: mutable_id_tracker.mappings
data/qdrant/collections/help_resources/0/segments/737f633d-4a1c-4927-bc93-2d5520e33988/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/90e29ddb-7916-4115-a0ab-efaa10653eed/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/c2ed36ee-e684-415d-9294-24bf4c49c984/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/d42aacbe-099c-4e8f-9ca1-68d2f6e6c9ff/payload_index/: IDENTITY  LOG  MANIFEST-000005
inputs/: resources.xlsx
services/api_service/: Dockerfile  pyproject.toml
services/api_service/help_tulsa_api/: main.py  models.py  prompt.py  routes.py
services/crawler_service/: Dockerfile  pyproject.toml
services/crawler_service/help_tulsa_crawler/: main.py  parser.py  scheduler.py
services/vector_service/: Dockerfile  pyproject.toml
services/vector_service/help_tulsa_vectorizer/: embedding.py  main.py  qdrant_client.py
tests/: conftest.py  test_api.py  test_vectorizer.py
