[tool.poetry]
name = "help_tulsa_api"
version = "0.1.0"
description = "API service for HelpTulsa.ai"
authors = ["HelpTulsa"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
qdrant-client = "^1.6.0"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
