[tool.poetry]
name = "help_tulsa_crawler"
version = "0.1.0"
description = "Crawler service for HelpTulsa.ai"
authors = ["HelpTulsa"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
