[tool.poetry]
name = "help_tulsa_vectorizer"
version = "0.1.0"
description = "Vectorizer service for HelpTulsa.ai"
authors = ["HelpTulsa"]

[tool.poetry.dependencies]
python = "^3.11"
qdrant-client = "^1.6.0"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
